reworked the entire program from javaFX to javaSwing for alphaTab playback, changed from .json to .gp for better compatability,